# scala-android-djinni-hello

./: .gitignore  README.md  build.sbt  gen_djinni.sh  ndk-cmake  ndk-config  ndk-project-config  ndk.sh
jni/: CMakeLists.txt  main.cpp
project/: android.sbt
src/androidTest/java/gie/hello/: Junit3MainActivityTest.java  Junit4MainActivityTest.java
src/main/: AndroidManifest.xml
src/main/idl/: hello_world.djinni
src/main/java/org/slf4j/impl/: AndroidLogger.java
src/main/res/values/: strings.xml
src/main/scala/gie/hello/: MainActivity.scala
